Adjust padding and margins on form to make sure all of the labels are aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,6 +297,8 @@ h3 {
     padding-top: 10px;
 }
 
+
+
 /* code below for the Booking Form taken from https://www.programiz.com/css/form-styling */
 label,
 input,
@@ -304,8 +306,8 @@ input,
 textarea {
     width: 93%;
     padding: 2px;
-    margin: 5px;
-    min-width: 1px;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 input:hover {
